apps/20-media/booklore/base/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booklore-mariadb
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: booklore-mariadb
