apps/20-media/booklore/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: booklore
spec:
  ports:
    - port: 6060
      targetPort: 6060
      name: http
  selector:
    app: booklore
