apps/20-media/booklore/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: booklore
spec:
  endpointSelector:
    matchLabels:
      app: booklore
  ingress:
    - fromEntities:
        - host
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "6060"
              protocol: TCP
